# ZerOpenGL

./: CMakeLists.txt  glad.c  main.cpp
include/glad/: glad.h
